--- a/next_steps/core_use_cases/user_personalization/user-personalization-with-contextual-recommendations.ipynb
+++ b/next_steps/core_use_cases/user_personalization/user-personalization-with-contextual-recommendations.ipynb
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -479,7 +479,7 @@
     "a_interactions_df['EVENT_TYPE']='RATING'\n",
     "# Making sure the author name is unique without spaces\n",
     "a_interactions_df['author'] = a_interactions_df['author'].str.replace(\" \",\"\")\n",
-    "# Rename the columns to a more Amazon Personalize standar notation\n",
+    "# Rename the columns to a more Amazon Personalize standard notation\n",
     "a_interactions_df.rename(columns = {'airline_name':'ITEM_ID', 'author':'USER_ID',\n",
     "                              'date':'TIMESTAMP', 'cabin_flown': 'CABIN_TYPE', 'overall_rating': 'EVENT_VALUE'}, inplace = True) \n",
     "a_interactions_df.head()"
